<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <TextView
        style="@style/HeaderTextStyle"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/TOPPINGS" />

    <CheckBox
        android:id="@+id/notify_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Whipped_cream"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/notify_me_checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Chocolate"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        style="@style/HeaderTextStyle"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:id="@+id/orderPlus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/textView"
        android:text="+"
        android:onClick="increment"/>

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderPlus"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"
        android:text="0" />

    <Button
        android:id="@+id/orderMinus"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/quantity_text_view"
        android:text="-"
        android:onClick="decrement"/>
</LinearLayout>

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@id/orderPlus"
        android:text="@string/order"
        android:onClick="submitOrder"/>
</LinearLayout>
</ScrollView>